# Quake_demo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  MODERNIZATION_PLAN.md
.github/agents/: quake-modernizer.md
.github/workflows/: ci.yml
QW/: CMakeLists.txt
QW/client/: cmd.c  common.c  cvar.c  net_udp.c
QW/server/: CMakeLists.txt  model.c  pr_cmds.c  pr_edict.c  sv_ccmds.c  sv_init.c  sv_main.c  sv_send.c  sv_user.c  sys_unix.c
WinQuake/: CMakeLists.txt  chase.c  cl_demo.c  cl_main.c  cl_parse.c  cmd.c  common.c  console.c  draw.c  host_cmd.c  in_inject.c  in_null.c  keys.c  menu.c  model.c  net_dgrm.c  net_udp.c  pr_cmds.c  pr_edict.c  sbar.c  screen.c  snd_capture.c  sv_main.c  sys_container.c  sys_linux.c  vid_headless.c
build-default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-default/QW/: Makefile  cmake_install.cmake
build-default/QW/server/: Makefile  cmake_install.cmake  qwsv
build-default/WinQuake/: Makefile  cmake_install.cmake  quake-dedicated
build-default/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-headless/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-headless/QW/: Makefile  cmake_install.cmake
build-headless/QW/server/: Makefile  cmake_install.cmake  qwsv
build-headless/WinQuake/: Makefile  cmake_install.cmake  quake-dedicated
build-headless/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/architecture/: ARCHITECTURE.md
docs/runbooks/: README.md  deployment.md  disaster-recovery.md  incident-response.md  scaling.md
gateway/: Dockerfile  go.mod
gateway/cmd/gateway/: main.go
gateway/internal/encoder/: encoder.go
gateway/internal/rtc/: peer.go
gateway/internal/signaling/: handler.go
gateway/internal/worker/: client.go
gateway/web/: index.html
infra/: main.bicep
infra/modules/: acr.bicep  container-apps-env.bicep  cost-alerts.bicep  defender.bicep  front-door.bicep  game-worker.bicep  key-vault.bicep  log-analytics.bicep  storage.bicep
infra/parameters/: dev.bicepparam
services/assets-api/: Dockerfile  go.mod
services/assets-api/cmd/assets-api/: main.go
services/assets-api/internal/handler/: asset.go
services/assets-api/internal/storage/: blob.go
services/telemetry-api/: Dockerfile  go.mod
services/telemetry-api/cmd/telemetry-api/: main.go
services/telemetry-api/internal/handler/: telemetry.go
services/telemetry-api/internal/ingest/: forwarder.go
session-manager/: Dockerfile  go.mod
session-manager/cmd/session-manager/: main.go
session-manager/internal/auth/: entra.go
session-manager/internal/provisioner/: aca.go
session-manager/internal/session/: store.go
tests/: CMakeLists.txt
